--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Dinosaur Designs</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -23,28 +25,21 @@
       <h2 id="hadrosaur">Hadrosaur</h2>
       <figure>
         <img src="images/hadrosaur.jpg" alt="">
-        <figcaption>Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
+        <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout.</figcaption>
       </figure>
 
       <h2 id="iguanodon">Iguanodon</h2>
       <figure>
         <img src="images/iguanodon.jpg" alt="">
-        <figcaption>Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
+        <figcaption class="intro">Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous.</figcaption>
       </figure>
 
       <h2 id="stegosaurus">Stegosaurus</h2>
       <figure>
         <img src="images/stegosaurus.jpg" alt="">
-        <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
+        <figcaption class="intro">Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.</figcaption>
       </figure>
 
-
-
-      Hadrosaur
-      Iguanodon
-      Stegosaurus
-
-      ---
     </main>
 
 </body>
